cwd in python notebook

--- a/YoutubeHackathon/YoutubeHack.ipynb
+++ b/YoutubeHackathon/YoutubeHack.ipynb
@@ -92,11 +92,12 @@
     "totalData = []\n",
     "targetData = []\n",
     "\n",
+    "cwd = os.getcwd()\n",
     "# extracts data from files\n",
-    "extractData(open(\"C:/Users/mj4ey/Documents/YoutubeHackathon/0.txt\", \"r\"), totalData, targetData)\n",
-    "extractData(open(\"C:/Users/mj4ey/Documents/YoutubeHackathon/1.txt\", \"r\"), totalData, targetData)\n",
-    "extractData(open(\"C:/Users/mj4ey/Documents/YoutubeHackathon/2.txt\", \"r\"), totalData, targetData)\n",
-    "extractData(open(\"C:/Users/mj4ey/Documents/YoutubeHackathon/3.txt\", \"r\"), totalData, targetData)\n",
+    "extractData(open(cwd + \"/0.txt\", \"r\"), totalData, targetData)\n",
+    "extractData(open(cwd + \"/1.txt\", \"r\"), totalData, targetData)\n",
+    "extractData(open(cwd + \"/2.txt\", \"r\"), totalData, targetData)\n",
+    "extractData(open(cwd + \"/3.txt\", \"r\"), totalData, targetData)\n",
     "\n",
     "viewSave = []\n",
     "\n",
